# libcereal

./: .gitignore  AUTHORS  MAINTAINERS  Makefile.am  autogen.sh  cereal-1.0.pc.in  configure.ac
cereal/: Makefile.am  bytestream.vala  posixserialconnection.vala  serialconnection.vala  serialconnectionfactory.c  stringstream.vala  winserialconnection.vala
tests/: Makefile.am  bytestreamtest.vala  echotest.vala  posixtest.vala  stringstreamtest.vala
vapi/: windows.vapi
