AC_INIT([libcereal], [0.1.0], [mfpuente.ar@gmail.com], [libcereal])
AC_CONFIG_SRCDIR([Makefile.am])
AC_CONFIG_HEADERS(config.h)
AM_INIT_AUTOMAKE([dist-bzip2])
AM_MAINTAINER_MODE
m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])

AC_PROG_CC
AM_PROG_CC_C_O
AC_DISABLE_STATIC
AC_PROG_LIBTOOL

LIBCEREAL_LT_VERSION="1:0:0"
AC_SUBST(LIBCEREAL_LT_VERSION)

AM_PROG_VALAC([0.8.1])

AH_TEMPLATE([GETTEXT_PACKAGE], [Package name for gettext])
GETTEXT_PACKAGE=libcereal
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE")
AC_SUBST(GETTEXT_PACKAGE)
AM_GLIB_GNU_GETTEXT
IT_PROG_INTLTOOL([0.35.0])

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)

GLIB_REQUIRED=2.12.0

PKG_CHECK_MODULES(LIBCEREAL,
	[glib-2.0 >= $GLIB_REQUIRED
	gobject-2.0 >= $GLIB_REQUIRED])

AC_SUBST(LIBCEREAL_CFLAGS)
AC_SUBST(LIBCEREAL_LIBS)

AC_CONFIG_FILES([Makefile
	cereal-1.0.pc
	cereal/Makefile
	po/Makefile.in])

AC_OUTPUT
